# santodan-custom-nodes-comfyui

./: .gitignore  LICENSE.txt  README.md  __init__.py  info.json  pyproject.toml  requirements.txt
santodan_nodes/: lora_info.py  promptListTemplate.py  random_lora_node.py  random_lora_nodes.py  server_routes.py  shutdownNode.py  utils.py  wildcard.py
santodan_nodes/prompt_list_templates/: IllustriousWildcard.json  WildcardsExamples.json  modelTest.json  modelTest_2.json  modelTest_NovaFurry.json  modelTest_noobXL.json  test.json
santodan_nodes/prompt_list_templates/test/: test.json
web/js/: easyuse_prompt_list.js  save_shutdown.js  utils.js  wildcard_manager.js
