[project]
name = "santodan-custom-nodes-comfyui"
description = "Wildcard Manager and Randomizes selected LoRAs and strengths. Includes trigger word output and support for exclusive/random selection. And some other random utils nodes"
version = "1.8.4"
license = {file = "LICENSE"}
dependencies = ["werkzeug"]

[project.urls]
Repository = "https://github.com/Santodan/santodan-custom-nodes-comfyui"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "santodan"
DisplayName = "santodan-custom-nodes-comfyui"
Icon = ""
includes = []
